--- a/archiso/airootfs/etc/calamares/modules/packages.conf
+++ b/archiso/airootfs/etc/calamares/modules/packages.conf
@@ -208,10 +208,16 @@ operations:
     - yaml-cpp
     - mkinitcpio-archiso
     - boost-libs
+    - kactivities
+    - kdeclartive
+    - kwayland
+    - kwallet
+    - kpackage
     - ckbcomp
     - alci-calamares
     - hwinfo
     - qt5-xmlpatterns
+    - plasma-framework
     - squashfs-tools
     - kconfig
     - kcoreaddons
