--- a/archiso/grub/grub.cfg
+++ b/archiso/grub/grub.cfg
@@ -21,7 +21,7 @@ if serial --unit=0 --speed=115200; then
 fi
 
 # Set default menu entry
-default=alci
+default=arcolinux
 timeout=15
 timeout_style=menu
 
@@ -30,17 +30,38 @@ play 600 988 1 1319 4
 
 # Menu entries
 
-menuentry "Arch install medium (x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'alci' {
+menuentry "ArchLinux install medium (x86_64, UEFI, open source)" --class arch --class gnu-linux --class gnu --class os --id 'arcolinux' {
     set gfxpayload=keep
     search --no-floppy --set=root --label %ARCHISO_LABEL%
-    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=free nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 nvme_load=yes
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 
-menuentry "Arch install medium with speakup screen reader (x86_64, UEFI)" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'alci-accessibility' {
+menuentry "ArchLinux install medium (x86_64, UEFI, open source, no nouveau)" --class arch --class gnu-linux --class gnu --class os --id 'arcolinuxnn' {
     set gfxpayload=keep
     search --no-floppy --set=root --label %ARCHISO_LABEL%
-    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% accessibility=on
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=freenonouveau radeon.modeset=1 i915.modeset=1 nvme_load=yes
+    initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+}
+
+menuentry "ArchLinux install medium (x86_64, UEFI, NVIDIA)" --class arch --class gnu-linux --class gnu --class os --id 'arcolinuxnv' {
+    set gfxpayload=keep
+    search --no-floppy --set=root --label %ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=nonfree nouveau.modeset=0 radeon.modeset=1 i915.modeset=1 nvme_load=yes
+    initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+}
+
+menuentry "ArchLinux install medium (x86_64, UEFI, NVIDIA, no nouveau)" --class arch --class gnu-linux --class gnu --class os --id 'arcolinuxnvnn' {
+    set gfxpayload=keep
+    search --no-floppy --set=root --label %ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=nonfreenonouveau radeon.modeset=1 i915.modeset=1 nvme_load=yes
+    initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+}
+
+menuentry "ArchLinux install medium (x86_64, UEFI, safe graphics, nomodeset)" --class arch --class gnu-linux --class gnu --class os --id 'arcolinuxnm' {
+    set gfxpayload=keep
+    search --no-floppy --set=root --label %ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=free nomodeset nouveau.modeset=0 radeon.modeset=0 i915.modeset=0 nvme_load=yes
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 
