--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -141,3 +141,7 @@ Include = /etc/pacman.d/mirrorlist
 #remember to add chaotic-mirrorlist and chaotic-keyring to the packages.x86_64
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
+
+[arch]
+SigLevel = Optional TrustAll
+Server = file:///opt/arch
